# vis-arena

./: .amplify-app-id  .gitignore  .gitmodules  AGENTS.md  README.md  deploy-amplify.sh  pnpm-lock.yaml
apps/server/: .env.example  README.md  pyproject.toml
apps/server/scripts/: dev.sh
apps/server/src/vis_arena_server/: __init__.py  arena_data.py  arena_runner.py  auth.py  db.py  evaluator.py  executor.py  llm.py  local_storage.py  main.py  rounds.py  runner.py  schemas.py  settings.py  storage.py  trajectory.py
apps/server/tests/: conftest.py  test_aws_batch_executor.py  test_converse.py  test_cost.py  test_peer_review.py  test_smoke.py
apps/web/: .ent  .env.example  README.md  amplify.yml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/docs/: dataset-guide.md  getting-started.md  sdk-guide.md  submission-guide.md
apps/web/src/: index.css  main.tsx
apps/web/src/components/: AnalyticsCharts.tsx  FrontierChart.tsx  ScatterChart.tsx  WinMatrix.tsx
docs/: arena_protocol.md  aws_batch_fargate_architecture.md  aws_cli_deployment.md  peer_review_arena.md
examples/tasks/monthly-sales/: task.md
examples/tasks/visualization-publications/: task.md
infra/evaluator/: Dockerfile
schemas/: evaluation.schema.json  generation.schema.json  task.schema.json
submissions/python-template/: README.md  agent  agent.md  agent.py  example_agent.py  llm_client.py  pyproject.toml  submission.yaml
submissions/python-template/src/vis_template_agent/: __init__.py  cli.py  evaluator.py  generator.py  task.py
(+3 files in other folders)
